# PIUQ-main

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: default.yaml
configs/datasets/: highd.yaml
docs/: configuration.md  validation.md
scripts/: data_selfcheck.py  preprocess.py  visualize_raw.py
src/piuq/: config.py
src/piuq/data/: configs.py  pipeline.py  windows.py
src/piuq/data/datasets/: base.py  highd.py
src/piuq/data/geometry/: frenet.py
src/piuq/geometry/: __init__.py  frenet.py
src/piuq/models/: __init__.py  gru.py
src/piuq/models/encoders/: __init__.py  base.py
src/piuq/models/physics/: __init__.py  residuals.py
src/piuq/training/: __init__.py  data_module.py  loop.py  metrics.py
src/piuq/visualization/: __init__.py  trajectories.py
tests/: conftest.py  test_config.py  test_data_module.py  test_dataset_config.py  test_frenet.py  test_gru.py  test_highd_dataset.py  test_windows.py
