[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "piuq"
version = "0.1.0"
description = "Physics-informed + Uncertainty highway trajectory toolkit"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "matplotlib",
    "numpy",
    "pandas",
    "pydantic",
    "pyyaml",
    "torch",
    "tqdm"
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
